@@ -33,7 +33,7 @@ sublibs:
 	done
 
 clean: subclean
-	-rm -f ../inst/include/dbarts/types.hpp include/misc/types.h config.hpp
+	@-rm -f ../inst/include/dbarts/types.hpp include/misc/types.h config.hpp
 	@-rm -rf .libs _libs
 	@-rm -f *.o $(SHLIB)
 
