@@ -89,14 +89,14 @@ linearAlgebra_sse2.false = touch linearAlgebra_sse2.o
 compile.linearAlgebra_sse2 = $(linearAlgebra_sse2.$(have.sse2))
 
 linearAlgebra_sse2.o : linearAlgebra_sse2.c $(INCLUDE_DIR)/misc/linearAlgebra.h
-	@$(compile.linearAlgebra_sse2)
+	$(compile.linearAlgebra_sse2)
 
 linearAlgebra_avx.true = $(CC) $(ALL_CPPFLAGS) $(CFLAGS) $(AVX_FLAG) -c linearAlgebra_avx.c -o linearAlgebra_avx.o
 linearAlgebra_avx.false = touch linearAlgebra_avx.o
 compile.linearAlgebra_avx = $(linearAlgebra_avx.$(have.avx))
 
 linearAlgebra_avx.o : linearAlgebra_avx.c $(INCLUDE_DIR)/misc/linearAlgebra.h
-	@$(compile.linearAlgebra_avx)
+	$(compile.linearAlgebra_avx)
 
 moments.o : moments.c $(INCLUDE_DIR)/misc/stats.h $(INCLUDE_DIR)/misc/simd.h
 	$(CC) $(ALL_CPPFLAGS) $(CFLAGS) -c moments.c -o moments.o
@@ -106,7 +106,7 @@ moments_sse2.false = touch moments_sse2.o
 compile.moments_sse2 = $(moments_sse2.$(have.sse2))
 
 moments_sse2.o : moments_sse2.c $(INCLUDE_DIR)/misc/stats.h
-	@$(compile.moments_sse2)
+	$(compile.moments_sse2)
 
 partition.o : partition.c $(INCLUDE_DIR)/misc/partition.h partition_body.c
 	$(CC) $(ALL_CPPFLAGS) $(CFLAGS) -c partition.c -o partition.o
@@ -116,21 +116,21 @@ partition_sse2.false = touch partition_sse2.o
 compile.partition_sse2 = $(partition_sse2.$(have.sse2))
 
 partition_sse2.o : partition_sse2.c $(INCLUDE_DIR)/misc/partition.h partition_body.c
-	@$(compile.partition_sse2)
+	$(compile.partition_sse2)
 
 partition_sse4.1.true = $(CC) $(ALL_CPPFLAGS) $(CFLAGS) $(SSE4_1_FLAG) -c partition_sse4_1.c -o partition_sse4_1.o
 partition_sse4.1.false = touch partition_sse4_1.o
 compile.partition_sse4.1 = $(partition_sse4.1.$(have.sse4.1))
 
 partition_sse4_1.o : partition_sse4_1.c $(INCLUDE_DIR)/misc/partition.h partition_body.c
-	@$(compile.partition_sse4.1)
+	$(compile.partition_sse4.1)
 
 partition_avx2.true = $(CC) $(ALL_CPPFLAGS) $(CFLAGS) $(AVX2_FLAG) -c partition_avx2.c -o partition_avx2.o
 partition_avx2.false = touch partition_avx2.o
 compile.partition_avx2 = $(partition_avx2.$(have.avx2))
 
 partition_avx2.o : partition_avx2.c $(INCLUDE_DIR)/misc/partition.h partition_body.c
-	@$(compile.partition_avx2)
+	$(compile.partition_avx2)
 
 simd.o : simd.c $(INCLUDE_DIR)/misc/simd.h
 	$(CC) $(ALL_CPPFLAGS) $(CFLAGS) -c simd.c -o simd.o
